<resources>
    <string name="app_name">Clima</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="usuario">Usuario</string>
    <string name="toolUsuario">Ingresar usuario</string>
    <string name="password">Contraseña</string>
    <string name="toolPassword">Ingresar contraseña</string>
    <string name="ingresar">Ingresar</string>
    <string name="errorLogin">Usuario o contraseña incorrecto/a</string>
    <string name="dia">Día</string>
    <string name="noche">Noche</string>
    <string name="correo">Correo</string>
    <string name="ingreseUsuario">Ingresar Usuario</string>
    <string name="ingreseContrasena">Ingresar Contraseña</string>
    <string name="ingreseCorreo">Ingresar Correo</string>
    <string name="crear">Crear</string>
    <string name="registrar">Registrar</string>
    <string name="crearUSuario">Crear usuario</string>
    <string name="ingresoNoValido">Usuario o contraseña no valido</string>
    <string name="mantenerIniciado">Mantener sesión abierta</string>
    <string name="errorEliminarUsuario">No se pudo eliminar el usuario</string>
    <string name="usuarioEliminado">Se elimino correctamente</string>
    <string name="nombreMenor5Letras">El nombre de usuario debe tener al menos 5 letras</string>
    <string name="contrasenaMenor6Letras">La contraseña no debe tener mínimo 6 caracteres</string>
    <string name="emailIncorrecto">El correo no tiene un formato valido</string>
    <string name="ingresarContrasenaDe">Ingrese contraseña de</string>
    <string name="nombreMayor15Letras">El nombre no puede tener mas de 15 letras</string>
    <string name="contrasenaMayor20Letras">La contraseña no puede ser mayor de 20 letras</string>
    <string name="nombreNoValido">El nombre solo puede tener letras, números y \"_\"</string>
    <string name="contrasenaNoValido">La contraseña solo puede tener letras, números y \"_\"</string>
    <string name="correoNoValido">El correo solo puede tener letras, números y \"_\"</string>
    <string name="navigation_drawer_close">CLOSE</string>
    <string name="navigation_drawer_open">OPEN</string>
    <string name="configuracion">Configuración</string>
    <string name="cerrarSesion">Cerrar sesión</string>
    <string name="home">Home</string>
    <string name="climaPorDia">Clima por día</string>
    <string name="mapa">Mapa</string>
    <string name="cerrarSesionMensaje">¿Esta seguro de cerrar sesión?</string>
    <string name="eliminarUsuarioMensaje">¿Esta seguro de eliminar el usuario?</string>
    <string name="ACEPTAR">ACEPTAR</string>
    <string name="CANCELAR">CANCELAR</string>
    <string name="editarPerfil">Editar Perfil</string>
    <string name="contrasena">Contraseña</string>
    <string name="guardar">Guardar Cambios</string>
    <string name="title_activity_fragment_map1">FragmentMap</string>
    <string name="consulta">Consulta</string>
    <string name="ingreseConsulta">Ingrese su consulta</string>
    <string name="noClienteEmail">No tiene un cliente de Email instalado</string>
    <string name="enviando">Enviando...</string>
    <string name="unidades">Unidades</string>
    <string name="metrica">Metrica</string>
    <string name="imperial">Imperial</string>
    <string name="notificacion">Notificaciones</string>
    <string name="hora">Hora</string>
    <string name="lunes">Lunes</string>
    <string name="martes">Martes</string>
    <string name="miercoles">Miércoles</string>
    <string name="jueves">Jueves</string>
    <string name="viernes">Viernes</string>
    <string name="sabado">Sábado</string>
    <string name="domingo">Domingo</string>
    <string name="tempMaxima">Temperatura máxima</string>
    <string name="tempMinima">Temperatura mínima</string>
    <string name="despejado">Clear</string>
    <string name="lluvia">Rain</string>
    <string name="lluvia_leve">Lluvia leve</string>
    <string name="nublado">Clouds</string>
    <string name="parcialmente_nublado">Parcialmente nublado</string>
    <string name="tormenta_electrica">Tormenta eléctrica</string>
    <string name="tormenta_electrica_granizo">Tormenta eléctrica con granizo</string>
    <string name="confGuardada">Se guardó la configuración correctamente</string>
    <string name="confErroGuardado">No se pudo guardar la configuración correctamente</string>
    <string name="UnidadTemp">Unidad Temperatura</string>
    <string name="gradoC">°C</string>
    <string name="gradoF">°F</string>
    <string name="Ciudad">Ciudad</string>
    <string name="IngresarCiudad">Ingresar ciudad</string>
    <string name="Buscar">Buscar</string>
    <string name="SinUbicacion">Sin ubicación</string>
    <string name="SinDatos">Sin datos</string>
    <string name="Enero">Enero</string>
    <string name="Febrero">Febrero</string>
    <string name="Marzo">Marzo</string>
    <string name="Abril">Abril</string>
    <string name="Mayo">Mayo</string>
    <string name="Junio">Junio</string>
    <string name="Julio">Julio</string>
    <string name="Agosto">Agosto</string>
    <string name="Septiembre">Septiembre</string>
    <string name="Octubre">Octubre</string>
    <string name="Noviembre">Noviembre</string>
    <string name="Diciembre">Diciembre</string>
    <string name="UtlimaActualizacion">Última actualizacón:</string>
    <string name="channel_description">Canal principal de la aplicacion</string>
    <string name="msgNotificacion">Buen día %s, En %s hoy actual:%s, Max: %s, Min: %s.</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="actualizando">Actualizando</string>
    <string name="errorActualizar">Error en la actualizacion</string>
    <string name="exitoActualizacion">Actualizado con exito</string>
    <string name="seleccionarCiudad">Seleccionar una ciudad</string>
    <string name="noUsuarioRegistrado">No hay un usuario logueado</string>
</resources>
