<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/usuario"/>

    <EditText
        android:id="@+id/nuevoUsuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ingreseUsuario"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/password"/>

    <EditText
        android:id="@+id/nuevaPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ingreseContrasena"
        android:inputType="textPassword"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/correo"/>

    <EditText
        android:id="@+id/nuevoCorreo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:hint="@string/ingreseCorreo"/>

    <Button
        android:id="@+id/btnAgregarUsuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/registrar"
        style="@style/BotonAgregar"/>
</LinearLayout>