<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/marginM"
                android:text="@string/unidades"
                android:textAlignment="center"
                android:textSize="@dimen/textM" />

            <RadioGroup
                android:id="@+id/grupoRadioUnidad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/marginM"
                android:orientation="horizontal"
                android:weightSum="2">

                <RadioButton
                    android:id="@+id/radioMetrica"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true"
                    android:text="@string/metrica" />

                <RadioButton
                    android:id="@+id/radioImperial"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/imperial" />
            </RadioGroup>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:theme="@style/separador" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/marginM"
                android:orientation="horizontal"
                android:weightSum="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.9"
                    android:text="@string/notificacion"
                    android:textSize="@dimen/textM"/>

                <Switch
                    android:id="@+id/switch_notificaicon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.1"
                    android:checked="true" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/contenedorNotificacion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TimePicker
                    android:id="@+id/horaNotificacion"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:timePickerMode="spinner"
                    />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:theme="@style/separador" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:id="@+id/btnGuardar"
                style="@style/BotonAgregar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/marginM"
                android:text="@string/guardar" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
